Source/WebCore/page/IntersectionObserver.h
@@ -27,6 +27,7 @@
 
 #if ENABLE(INTERSECTION_OBSERVER)
 
+#include "ActiveDOMObject.h"
 #include "IntersectionObserverCallback.h"
 #include "IntersectionObserverEntry.h"
 #include "LengthBox.h"
@@ -47,15 +48,15 @@ struct IntersectionObserverRegistration {
 
 struct IntersectionObserverData {
     // IntersectionObservers for which the element that owns this IntersectionObserverData is the root.
-    // An IntersectionObserver without any targets is only owned by JavaScript wrappers. An
-    // IntersectionObserver with at least one target is also owned by its trackingDocument.
+    // An IntersectionObserver is only owned by a JavaScript wrapper. ActiveDOMObject::hasPendingActivity
+    // is overridden to keep this wrapper alive while the observer has ongoing observations.
     Vector<WeakPtr<IntersectionObserver>> observers;
 
     // IntersectionObserverRegistrations for which the element that owns this IntersectionObserverData is the target.
     Vector<IntersectionObserverRegistration> registrations;
 };
 
-class IntersectionObserver : public RefCounted<IntersectionObserver>, public CanMakeWeakPtr<IntersectionObserver> {
+class IntersectionObserver : public RefCounted<IntersectionObserver>, public ActiveDOMObject, public CanMakeWeakPtr<IntersectionObserver> {
 public:
     struct Init {
         Element* root { nullptr };
@@ -67,7 +68,7 @@ public:
 
     ~IntersectionObserver();
 
-    Document* trackingDocument() { return m_root ? &m_root->document() : m_implicitRootDocument.get(); }
+    Document* trackingDocument() const { return m_root ? &m_root->document() : m_implicitRootDocument.get(); }
 
     Element* root() const { return m_root; }
     String rootMargin() const;
@@ -89,6 +90,12 @@ public:
     void appendQueuedEntry(Ref<IntersectionObserverEntry>&&);
     void notify();
 
+    // ActiveDOMObject.
+    bool hasPendingActivity() const override;
+    const char* activeDOMObjectName() const override;
+    bool canSuspendForDocumentSuspension() const override;
+    void stop() override;
+
 private:
     IntersectionObserver(Document&, Ref<IntersectionObserverCallback>&&, Element* root, LengthBox&& parsedRootMargin, Vector<double>&& thresholds);
 
@@ -99,7 +106,7 @@ private:
     Element* m_root;
     LengthBox m_rootMargin;
     Vector<double> m_thresholds;
-    Ref<IntersectionObserverCallback> m_callback;
+    RefPtr<IntersectionObserverCallback> m_callback;
     Vector<Element*> m_observationTargets;
     Vector<Ref<IntersectionObserverEntry>> m_queuedEntries;
 };
